new proj/src/objects/SVMXC_Time_Entry__c.object
<CustomObject>
    <fields>
        <fullName>Activity_Type__c</fullName>
        <formula>if(Work_Details__c=&apos;&apos;,Text(Activity__c ),Text(Work_Details__r.SVMXC__Activity_Type__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity__c</fullName>
        <label>Activity</label>
        <picklist>
            <picklistValues>
                <fullName>Troubleshooting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Install/Replace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rebuild</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inspect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standby</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDB Time</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Associated_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The customer account associated with this time entry</description>
        <label>Associated Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Time Entries</relationshipLabel>
        <relationshipName>Time_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Calculated_Time__c</fullName>
        <formula>ROUND(Total_Time__c ,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>California_Break_Time__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by tech to document that a reported time entry reflects California break time</description>
        <label>California Break Time</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Create_Event__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Employment_Status__c</fullName>
        <description>Reflects the technician&apos;s employment status when the time entry record is created.  Populated by workflow if employment status has changed date of change is earlier than today</description>
        <inlineHelpText>Reflects the technician&apos;s employment status when the time entry record is created.  Populated by workflow if employment status has changed date of change is earlier than today</inlineHelpText>
        <label>Current Employment Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Time_Counter__c</fullName>
        <formula>If(Not(Contains(Text( Activity__c ),&apos;Travel&apos;)), 1 ,0)</formula>
        <label>Customer Time Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Time__c</fullName>
        <formula>If(Not(Contains(Text( Activity__c ),&apos;Travel&apos;)), Total_Time__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Download_to_iPad__c</fullName>
        <formula>If (CONTAINS( Related_User__c , $User.Id ), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Download to iPad</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date_Search__c</fullName>
        <formula>Text( End_Date_Time__c )</formula>
        <label>End Date (Search)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date_Time__c</fullName>
        <label>End Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FixedValue1__c</fullName>
        <formula>&quot;FH&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FixedValue1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FixedValue2__c</fullName>
        <formula>&quot;1&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FixedValue2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FixedValue3__c</fullName>
        <formula>&quot;2002&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FixedValue3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Time_Type__c</fullName>
        <label>Time Type</label>
        <picklist>
            <picklistValues>
                <fullName>Regular Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holiday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overtime</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_DS_CDB_Other__c</fullName>
        <label>CDB Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_DS_CDB_Type__c</fullName>
        <description>Used to track categories of CDB.</description>
        <label>CDB Type</label>
        <picklist>
            <controllingField>Activity__c</controllingField>
            <picklistValues>
                <fullName>Base - Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comp Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vacation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holiday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sick Leave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Job Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Classroom Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onshore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Immigration Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_DS_Download_to_Mobile__c</fullName>
        <formula>AND(
 NOT(ISBLANK(Timesheet__c)),
 Timesheet__r.GE_DS_Download_to_Mobile__c = true
)</formula>
        <label>Download to Mobile?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_DS_Overtime__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to indicate if Time Entry is Overtime.</description>
        <label>Overtime</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_DS_RecordTypeName__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GE_DS_RecordTypeName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_DS_Start_Date__c</fullName>
        <formula>DATEVALUE(Start_Date_Time__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_DS_Work_Description__c</fullName>
        <description>Used to track work performed for use on Service Report.</description>
        <label>Work Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_DS_Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order</label>
        <referenceTo>SVMXC__Service_Order__c</referenceTo>
        <relationshipLabel>Time Entries</relationshipLabel>
        <relationshipName>Time_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_OG_DS_Bonus_Amount__c</fullName>
        <formula>IF (  GE_OG_DS_Bonus_Rate_Type__c = &apos;Daily&apos;,  GE_OG_DS_Bonus_Rate__c *  GE_OG_DS_Total_Days__c , GE_OG_DS_Bonus_Rate__c * Total_Time__c ) +  GE_OG_DS_Premium_Holiday_Bonus__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bonus Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_OG_DS_Bonus_Applicable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bonus Applicable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_OG_DS_Bonus_Rate_Type__c</fullName>
        <formula>IF ( NOT(ISBLANK(TEXT(Technician__r.GE_OG_DS_Bonus_Rate_Type__c))), TEXT( Technician__r.GE_OG_DS_Bonus_Rate_Type__c ), &apos;Daily&apos;)</formula>
        <label>Bonus Rate Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_DS_Bonus_Rate__c</fullName>
        <label>Bonus Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_OG_DS_Premium_Holiday_Bonus__c</fullName>
        <label>Premium/Holiday Bonus</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_OG_DS_Status__c</fullName>
        <formula>TEXT(Technician__r.SVMCX_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_DS_Total_Days__c</fullName>
        <label>Total Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Include_in_Search__c</fullName>
        <formula>if((Download_to_iPad__c = 1 &amp;&amp;  Start_Date_Time__c &gt;= datetimevalue(TODAY() - 28)), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Include in Search</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Billable__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Boolean indicating if a time entry is billable or not</description>
        <label>Is Billable?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Labor_Rate__c</fullName>
        <defaultValue>15.00</defaultValue>
        <description>Average labor rate for reactive service calls</description>
        <label>Labor Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mileage_Cost__c</fullName>
        <formula>Miles_Driven__c * Mileage_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mileage Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mileage_Rate__c</fullName>
        <defaultValue>0.45</defaultValue>
        <label>Mileage Rate</label>
        <precision>9</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Miles_Driven__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Entry for miles driven during the course of service or non-service related work time</description>
        <label>Miles Driven</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Miles_Reported__c</fullName>
        <formula>Round( Miles_Driven__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Miles Reported</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month_Driven__c</fullName>
        <formula>TEXT(YEAR( DATEVALUE( Start_Date_Time__c ))) &amp; if( LEN(TEXT(Month(DATEVALUE(Start_Date_Time__c )))) =1,&quot;0&quot;&amp; Text(Month(DATEVALUE(Start_Date_Time__c ))),Text(Month(DATEVALUE(Start_Date_Time__c ))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month Driven</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Only_For_Working_Hours__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Only For Working Hours</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payroll_End_Date__c</fullName>
        <formula>text(YEAR( DATEVALUE(End_Date_Time__c) )) &amp; if(len(text(Month(datevalue(End_Date_Time__c))))=1,&quot;0&quot; &amp; text(Month(datevalue(End_Date_Time__c))),text(Month(datevalue(End_Date_Time__c))))&amp;
if(len(text(Day(datevalue(End_Date_Time__c))))=1,&quot;0&quot;&amp; text(Day(datevalue(End_Date_Time__c))),text(Day(datevalue(End_Date_Time__c))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payroll_Start_Date__c</fullName>
        <formula>text(YEAR( DATEVALUE(Start_Date_Time__c) )) &amp; if(len(text(Month(datevalue(Start_Date_Time__c))))=1,&quot;0&quot; &amp; text(Month(datevalue(Start_Date_Time__c))),text(Month(datevalue(Start_Date_Time__c))))&amp;
if(len(text(Day(datevalue(Start_Date_Time__c))))=1,&quot;0&quot;&amp; text(Day(datevalue(Start_Date_Time__c))),text(Day(datevalue(Start_Date_Time__c))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Account__c</fullName>
        <description>Renders the account associated with the time entry as a hyperlink</description>
        <formula>IF( Work_Details__c =&quot;&quot;,

    IF(Associated_Account__c =&quot;&quot;,

          HYPERLINK(&quot;%2F0016000000mq97X&quot;,&quot;*Not Customer Specific&quot;),

          HYPERLINK(&quot;%2F&quot;&amp;Associated_Account__c ,  Associated_Account__r.Name)),

		HYPERLINK(&quot;%2F&quot;&amp; Work_Details__r.SVMXC__Service_Order__r.SVMXC__Company__c,Work_Details__r.SVMXC__Service_Order__r.SVMXC__Company__r.Name))</formula>
        <label>Related Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_User__c</fullName>
        <formula>Technician__r.SVMXC__Salesforce_User__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC_Warnings__c</fullName>
        <label>Warnings</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Select__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Select</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Set_All_Day__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Set All Day</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date_Search__c</fullName>
        <formula>Text(Start_Date_Time__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date (Search)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date_Time__c</fullName>
        <label>Start Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Technician__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Technician</label>
        <referenceTo>SVMXC__Service_Group_Members__c</referenceTo>
        <relationshipLabel>Time Entries</relationshipLabel>
        <relationshipName>Time_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Timesheet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Timesheet</label>
        <referenceTo>SVMXC_Timesheet__c</referenceTo>
        <relationshipLabel>Time Entries</relationshipLabel>
        <relationshipName>Time_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Time__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Travel_Rate__c</fullName>
        <formula>Miles_Driven__c /Total_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Travel Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Travel_Time_Counter__c</fullName>
        <formula>If(Contains(Text( Activity__c ),&apos;Travel&apos;), 1 ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Travel Time Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Travel_Time__c</fullName>
        <formula>if( contains(TEXT(Activity__c),&apos;Travel&apos;), Total_Time__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Travel Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Work_Details__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Details</label>
        <referenceTo>SVMXC__Service_Order_Line__c</referenceTo>
        <relationshipLabel>Time Entries</relationshipLabel>
        <relationshipName>Time_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Work_Order_Number__c</fullName>
        <formula>If (Begins(TEXT(Activity__c),&quot;Work Detail&quot;), Work_Details__r.SVMXC__Service_Order__r.Name, &quot;N/A&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work Order Number</label>
        <type>Text</type>
    </fields>
    <label>Time Entry</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Comments__c</columns>
        <columns>Timesheet__c</columns>
        <columns>Related_Account__c</columns>
        <columns>Activity__c</columns>
        <columns>Technician__c</columns>
        <columns>Start_Date_Time__c</columns>
        <columns>End_Date_Time__c</columns>
        <columns>Total_Time__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TE-{0000000000}</displayFormat>
        <label>Time Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Entries</pluralLabel>
    <recordTypes>
        <fullName>AL</fullName>
        <active>true</active>
        <label>AL</label>
    </recordTypes>
    <recordTypes>
        <fullName>D_S</fullName>
        <active>true</active>
        <label>D&amp;S</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>GE_DS_Lock_Submitted_Timesheet_Entry</fullName>
        <active>true</active>
        <errorConditionFormula>($Profile.Name &lt;&gt; &apos;GE_DS_Titanium Dispatcher&apos; &amp;&amp; $Profile.Name &lt;&gt; &apos;GE_DS_Titanium Operations Support&apos; &amp;&amp; $Profile.Name &lt;&gt; &apos;GE_DS_Titanium Service Manager&apos; &amp;&amp; $Profile.Name &lt;&gt; &apos;GE_ES Developer&apos;) &amp;&amp; 
( 
( Timesheet__r.GE_DS_Prior_Status__c  = &quot;Submitted&quot; || 
Timesheet__r.GE_DS_Prior_Status__c = &quot;Approved&quot;) &amp;&amp; 
((GE_OG_DS_Status__c != &quot;New&quot;) || (GE_OG_DS_Status__c != &quot;&quot;)) 
)</errorConditionFormula>
        <errorMessage>A Time Entry cannot be added or modified after the Timesheet is approved.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SVMX_Ensure_Start_Time_Before_End_Time</fullName>
        <active>true</active>
        <description>Prevent negative entries on time entries by ensuring that start time is before end time</description>
        <errorConditionFormula>End_Date_Time__c &lt;= Start_Date_Time__c</errorConditionFormula>
        <errorDisplayField>Activity__c</errorDisplayField>
        <errorMessage>Your start date and time must be earlier than your end date and time</errorMessage>
    </validationRules>
</CustomObject>